#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libsma], [1.0], [guol@certusnet.com.cn])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/stringHelper.c])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])

# Checks for programs.
AM_INIT_AUTOMAKE
AM_PROG_AR
AC_PROG_RANLIB

AC_OUTPUT
