#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([calc], [1.0], [guol@certusnet.com.cn])

# AM_INIT_AUTO是需要手动添加的
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([calc.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
# 如果想要编译出so动态库，则需要添加这个
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
