#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# 需要添加软件的名称、版本号、联系人
AC_PREREQ([2.69])
AC_INIT([calc], [1.0], [guol@certusnet.com.cn])

# AM_INIT_AUTO是需要手动添加的
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([calc.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
# 编译C语言程序必须的，检查编译器GCC
AC_PROG_CC
# 如果想要编译出so动态库，则需要添加这个，检查并使用LIBTOOL
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
